# expense-record

./: .gitignore  README.md  pyproject.toml  run.sh
docs/superpowers/plans/: 2026-03-30-expense-screenshot-tool.md  2026-03-31-global-paste-image.md  2026-03-31-month-day-date-parser.md  2026-03-31-negative-amount-preference.md  2026-03-31-ocr-lines-panel.md  2026-03-31-run-sh-launcher.md  2026-03-31-short-date-format.md  2026-03-31-webpage-version-display.md  2026-04-01-multi-transaction-screenshot.md
docs/superpowers/specs/: 2026-03-30-expense-snipping-tool-design.md  2026-03-31-global-paste-image-design.md  2026-03-31-month-day-date-parser-design.md  2026-03-31-negative-amount-preference-design.md  2026-03-31-ocr-lines-panel-design.md  2026-03-31-run-sh-launcher-design.md  2026-03-31-short-date-format-design.md  2026-03-31-webpage-version-display-design.md  2026-04-01-multi-transaction-screenshot-design.md  2026-04-06-statement-import-design.md
src/expense_record/: __init__.py  api.py  app.py  config.py  dashboard.py  models.py  ocr.py  parser.py  statement_import.py  storage.py
src/expense_record/static/: app.css  app.js
src/expense_record/static/nested/: fixture.txt
src/expense_record/templates/: index.html
tests/: test_api.py  test_dashboard.py  test_parser.py  test_statement_import.py  test_storage.py
